--- a/pom.xml
+++ b/pom.xml
@@ -81,16 +81,27 @@
 </dependency>
 
 
-		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>springcore</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.example</groupId>
-			<artifactId>checkComm</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		
+		
+		<!-- Add BEFORE closing </dependencies> tag -->
+
+<!-- ✅ Spring Data JPA (for database operations) -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+
+<!-- ✅ Spring Security (NEW - for authentication) -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
+<!-- ✅ Thymeleaf Spring Security Integration (NEW) -->
+<dependency>
+    <groupId>org.thymeleaf.extras</groupId>
+    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
