--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+   <groupId>com.diffplug.spotless</groupId>
+   <artifactId>spotless-maven-plugin</artifactId>
+   <version>2.43.0</version>
+   <configuration>
+       <java>
+           <googleJavaFormat>
+               <version>1.17.0</version>
+               <style>GOOGLE</style>
+           </googleJavaFormat>
+           <removeUnusedImports/>
+           <importOrder>
+               <order>java,javax,org,com,</order>
+           </importOrder>
+       </java>
+   </configuration>
+</plugin>
 		</plugins>
 	</build>
 
